More configuration parameters for CubaWidgetsetBuilding task #PL-5663